--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/callboard/add_ad/">About</a>
+            <a class="nav-link" href="/callboard/add_ad/">Add</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/callboard/comments/">Comments</a>
