--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -19,7 +19,32 @@
 </head>
  
 <body>
- 
+ <style>
+  body {
+    background: #dae0e6;
+}
+
+.row{
+    border: 1px solid transparent;
+    /* border-radius: 8px; */
+    /* border-image: linear-gradient(transparent 0%, #08cfee 100%);
+    border-image-slice: 1; */
+    box-shadow: inset 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
+    padding: 10px;
+    background: none;
+}
+.ad_topic{
+    background: linear-gradient(to top, transparent 0%, #00ddff1c 100%);
+    border-image-slice: 1;
+    display: flex; 
+}
+.ad_titles hr{
+    color: rgb(255, 255, 255);
+    border: 1px solid transparent;
+    border-image: linear-gradient(to left, transparent 0%, #08cfee 100%);
+    border-image-slice: 1;
+}
+ </style>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
