--- a/bulletinboard/templates/add_ad.html
+++ b/bulletinboard/templates/add_ad.html
@@ -8,17 +8,10 @@ Add new post
 
 {% block content %}
     <style>
-    body {
-      background: #dae0e6;
-    }
-    .row{
-        border: 1px solid transparent;
-        border-radius: 8px;
-        /* border-image: linear-gradient(transparent 0%, #08cfee 100%);
-        border-image-slice: 1; */
-        box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
-        padding: 10px;
-        min-width: 350px;
+    p, label{
+        font-weight: bold;
+        color: rgba(0, 0, 0, 0.573);
+        font-style: italic;
     }
     .add-form{
       min-height: 90px;
@@ -29,46 +22,58 @@ Add new post
       margin: 5px auto;
       background-color: white;
    }
-   /* .id_add {
-        display: grid;
-    } */
+   .id_add {
+        padding-bottom: 20px;
+    }
     .ad_author, #id_category, #id_title{
         margin-bottom: 0;
-        color: blue;
+        color: rgba(0, 0, 0, 0.573);
         width: 25%;
-        margin: 0 auto;
+        margin: 5px auto;
     }
     .id_add label[for="id_content"] {
         display: none;
     }
-    /* .id_add label[for="id_files"] {
-        display: none;
-    } */
-    /* .id_add label[for="id_check_box"] {
+    .id_add label[for="id_files"] {
         display: none;
     }
-    .id_add label[for="id_check_box"]:focus-visible {
-        display: block;
-    } */
-    .id_add label + input:focus {
+    .id_add label[for="id_check_box"] {
+        display: none;
+    }
+    #id_check_box[alt] {
+        content: 'fff';
+    }
+    #id_files{
+        max-width: 222px;
+    }
+    /* .id_add label + input:focus {
         display: none!important;
     }
-            
+             */
+    .text-center{
+        max-width: 500px;
+        margin: 0 auto;
+    }
     .id_add textarea {
         height: 80px;
-        margin: 5px;
-        width:85%;
+        margin: 10px auto 20px;
+        width:87%;
+        max-width: 360px;
         border: 3px solid transparent;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
     </style>
     <div class="add-form">
+        <div class="ad_topic">
+            <p style="font-weight: bold; color:rgba(0, 0, 0, 0.573);font-style:italic;">{{ Ad.category }}</p>
+        </div>
         <h1>Add new ad</h1>
     <form method="POST" class="id_add form" enctype="multipart/form-data">
         {% csrf_token %}
         <p class="ad_author">Author: {{ actual_user }}</p>
         {{ form }} <!-- Теперь нам нужна только готовая форма и кнопка -->
+        
         <input href="sign/upgrade/" type="submit" value="Добавить пост">
 </form>
 </div>
