--- a/bulletinboard/templates/add_ad.html
+++ b/bulletinboard/templates/add_ad.html
@@ -31,6 +31,9 @@ Add new post
         width: 25%;
         margin: 5px auto;
     }
+    .id_add #id_author{
+        display: none;
+    }
     .id_add label[for="id_content"] {
         display: none;
     }
@@ -40,6 +43,9 @@ Add new post
     .id_add label[for="id_check_box"] {
         display: none;
     }
+    .id_add label[for="id_author"] {
+        display: none;
+    } 
     #id_check_box[alt] {
         content: 'fff';
     }
@@ -63,6 +69,7 @@ Add new post
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
+
     </style>
     <div class="add-form">
         <div class="ad_topic">
