--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -44,6 +44,7 @@
     border-image: linear-gradient(to left, transparent 0%, #08cfee 100%);
     border-image-slice: 1;
 }
+
  </style>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
@@ -53,7 +54,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse select__body hide" id="navbarResponsive" >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home
@@ -89,7 +90,23 @@
     </div>
   </div>
  
+  <script>
+    function dropdown() {
+ const selectItem = document.querySelectorAll(".navbar-toggler");
 
+ selectItem.forEach((item, i) => {
+   item.addEventListener("click", (event) => {
+     const selectBody = document.querySelectorAll(".select__body");
+
+     selectBody[i].classList.toggle("show");
+     item.classList.toggle("shadow");
+   });
+ });
+}
+
+
+dropdown();
+  </script>
 <script src="js/scripts.js"></script>
 </body>
  
