--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -72,7 +72,16 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="/accounts/logout/">{{ request.user }} - Выйти</a> </li>
           {% if user.is_staff or user.is_superuser%}
-            <button> <a href="sign/upgrade/"> Хочу стать автором!</a> </button>
+            <button class="news_toggler"> <a > Хочу стать автором!</a> </button> <!-- href="upgrade/" -->
+              <div class="newsletters" >
+                <form method="post">
+                  <input placeholder="Title of newsletter" type="text" required>
+                  <input placeholder="user_email" type="email" required>
+                  <input placeholder="content newsletter" type="text" required>
+                  <button type="submit">Send newsletter</button>
+                </form>
+
+              </div> 
           {% endif %} 
         </ul>
       </div>
@@ -92,20 +101,32 @@
  
   <script>
     function dropdown() {
- const selectItem = document.querySelectorAll(".navbar-toggler");
+      const selectItem = document.querySelectorAll(".navbar-toggler");
 
- selectItem.forEach((item, i) => {
-   item.addEventListener("click", (event) => {
-     const selectBody = document.querySelectorAll(".select__body");
+      selectItem.forEach((item, i) => {
+        item.addEventListener("click", (event) => {
+          const selectBody = document.querySelectorAll(".select__body");
 
-     selectBody[i].classList.toggle("show");
-     item.classList.toggle("shadow");
-   });
- });
-}
+          selectBody[i].classList.toggle("show");
+          item.classList.toggle("shadow");
+        });
+      });
+      }
 
 
-dropdown();
+    dropdown();
+    function dropdown_newsletter() {
+      const selectItem = document.querySelectorAll(".news_toggler");
+      selectItem.forEach((item, i) => {
+        item.addEventListener("click", (event) => {
+          const selectBody = document.querySelectorAll(".newsletters");
+
+          selectBody[i].classList.toggle("show");
+          item.classList.toggle("shadow");
+        });
+      });
+      }
+    dropdown_newsletter()
   </script>
 <script src="js/scripts.js"></script>
 </body>
