--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -16,6 +16,7 @@
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="../../static/css/styles.css" rel="stylesheet" />
+  
 </head>
  
 <body>
@@ -43,6 +44,103 @@
     border: 1px solid transparent;
     border-image: linear-gradient(to left, transparent 0%, #08cfee 100%);
     border-image-slice: 1;
+}
+
+
+.select {
+  width: 60%;
+}
+
+    .select:not(:last-child) {
+  margin-right: 32px;
+}
+
+    /* .selects__title {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 0.02em;
+  color: #111111;
+  opacity: 0.8;
+  margin-bottom: 16px;
+  margin-left: 16px;
+} */
+
+    .news_toggler {
+  position: relative;
+}
+
+    .news_toggler {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  width: 60%;
+  height: 36px;
+  padding: 15px 16px;
+  background: #FFFFFF;
+  border: 2px solid rgba(125, 138, 253, 0.3);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+    .shadow {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+}
+
+    .newsletters {
+  position: absolute;
+  top: 104px;
+  left: 10px;
+  max-width: 250px;
+  width: 100%;
+  max-height: 379px;
+  padding: 24px 16px;
+  background: #FFFFFF;
+  border: 2px solid rgba(125, 138, 253, 0.3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.04);
+  border-radius: 4px;
+  overflow-y: scroll;
+  z-index: 1;
+}
+    .select-body__height {
+  height: 443px;
+}
+    .newsletters_form {
+  list-style: none;
+}
+   .newsletters_form:nth-child(n) {
+  margin-bottom: 16px;
+}  
+/*
+    .select-body__item:last-child {
+  margin-bottom: 20px;
+} */
+
+    .submit_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+    .submit_button {
+  background: #638FFF;
+  border-radius: 4px;
+  padding: 9px 63px;
+  border: none;
+  margin: 0 auto;
+  font-weight: bold;
+  line-height: 22px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+    .hide {
+  display: none;
+}
+
+    .show {
+  display: block;
 }
 
  </style>
@@ -73,12 +171,13 @@
           <li class="nav-item"><a class="nav-link" href="/accounts/logout/">{{ request.user }} - Выйти</a> </li>
           {% if user.is_staff or user.is_superuser%}
             <button class="news_toggler"> <a > Хочу стать автором!</a> </button> <!-- href="upgrade/" -->
-              <div class="newsletters" >
-                <form method="post">
+              <div class="newsletters hide">
+                <form method="post" required class="newsletters_form"> 
+                  {% csrf_token %}  
                   <input placeholder="Title of newsletter" type="text" required>
                   <input placeholder="user_email" type="email" required>
                   <input placeholder="content newsletter" type="text" required>
-                  <button type="submit">Send newsletter</button>
+                  <button type="submit" class="submit_button">Send newsletter</button>
                 </form>
 
               </div> 
