mail send_manual - complited

--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -175,10 +175,10 @@
               <div class="newsletters hide">
                 <form method="post" required class="newsletters_form" action="{% url 'upgrade' %}" name="newsletters_form_request"> 
                   {% csrf_token %}  
-                  <input placeholder="Title of newsletter" type="text" required>
-                  <input placeholder="user_email" type="email" required>
-                  <input placeholder="content newsletter" type="text" required>
-                  <button type="submit" class="submit_button" href="/protect/upgrade/">Send newsletter</button>
+                  <input placeholder="Title of newsletter" type="text" name="title_email" required>
+                  <input placeholder="user_email" type="email" name="personal_email" required>
+                  <input placeholder="content newsletter" type="text" name="content_email" required>
+                  <button type="submit" method="post" class="submit_button" href="/protect/upgrade/">Send newsletter</button>
                 </form>
 
               </div> 
