--- a/bulletinboard/templates/flatpages/default.html
+++ b/bulletinboard/templates/flatpages/default.html
@@ -15,7 +15,7 @@
  
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="../../static/css/styles.css" rel="stylesheet" />
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
   
 </head>
  
@@ -228,7 +228,7 @@
       }
     dropdown_newsletter()
   </script>
-<script src="js/scripts.js"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 </body>
  
 </html>
